Bob; 1. menu overlay ok  2. fix competition.html oppnents being overlap

--- a/app/stylus/competition.styl
+++ b/app/stylus/competition.styl
@@ -82,6 +82,7 @@
 		$vs_w = 576
 		$vs_h = 82
 		position absolute
+		z-index 1
 		width ($vs_w * 100 / $content_w)%
 		height ($vs_h * 100 / $content_h)%
 		// background-color gold
