--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -48,7 +48,8 @@ a, a:link, a:visited, a:active, a:hover {
     top 0
     left 0
     z-index 101
-
+#for_menu
+    z-index 90
 /*muti-browser capability*/
 animation()
     -webkit-animation arguments
